@@ -1,3 +1,8 @@
+4/04/2006 Bob Rossi <bob@brasko.net>
+
+	* annotate-two/src/commands.c (parse_breakpoint): Log message when
+	regex searching fails, but prune out watchpoint's first.
+
 3/14/2006 Bob Rossi <bob@brasko.net>
 
 	* annotate-two/src/commands.c (parse_breakpoint): Do not log message
